Fix custom tooltip visibility and default style.

--- a/options/options.css
+++ b/options/options.css
@@ -421,8 +421,8 @@ textarea {
 	font-weight: normal;
 }
 #customTooltipCSSPreview {
+	all: initial;
 	margin: 0;
-	
 	display: block;
 	padding: 3px;
 	max-width: 560px;
